import ansicht.SpielFenster;
//nur spiel starten
public class Main {
    public static void main(String[] args) {
        new SpielFenster();
    }
}