@startuml
skinparam classAttributeIconSize 0
title Flappy Bird – UML Klassendiagramm

class Main {
  +main(args: String[]): void
}

package ansicht {

  class SpielFenster {
    +SpielFenster()
  }

  class SpielPanel {
    -vogel: Vogel
    -vogelBild: Image
    -timer: Timer
    -saeulen: ArrayList<Saeule>
    -saeuleOben: Image
    -saeuleUnten: Image
    -hintergrundBild: Image
    -spielGestartet: boolean
    -spielModell: SpielModell
    -random: Random
    -spielLogik: SpielLogik
    +SpielPanel()
    #paintComponent(g: Graphics): void
    -neustarten(): void
  }

}

package Logik {

  class SpielLogik {
    -vogel: Vogel
    -saeulen: ArrayList<Saeule>
    -spielModell: SpielModell
    -random: Random
    -panelBreite: int
    -panelHoehe: int
    +SpielLogik(vogel: Vogel, saeulen: ArrayList<Saeule>, spielModell: SpielModell, panelBreite: int, panelHoehe: int)
    +update(): void
  }

}

package modell {

  class Vogel {
    -x: int
    -y: int
    -groesse: int
    -geschwindigkeitY: double
    +Vogel(x: int, y: int, groesse: int)
    +getX(): int
    +getY(): int
    +getGroesse(): int
    +getGeschwindigkeitY(): double
    +setGeschwindigkeitY(geschwindigkeit: double): void
    +setY(y: int): void
    +reset(x: int, y: int): void
  }

  class Saeule {
    -x: int
    -breite: int
    -lueckeY: int
    -lueckeHoehe: int
    -gschwindigkeit: int
    -punktGegeben: boolean
    +Saeule(x: int, breite: int, lueckeY: int, lueckeHoehe: int)
    +getX(): int
    +getBreite(): int
    +getLueckeY(): int
    +getLueckeHoehe(): int
    +getGschwindigkeit(): int
    +setX(x: int): void
    +setLueckeY(lueckeY: int): void
    +isPunktGegeben(): boolean
    +setPunktGegeben(punktGegeben: boolean): void
  }

  class SpielModell {
    -punkte: int
    -highscore: int
    -gameOver: boolean
    -speicherung: HighscoreSpeicherung
    +SpielModell()
    +getPunkte(): int
    +setPunkte(punkte: int): void
    +getHighscore(): int
    +setHighscore(highscore: int): void
    +isGameOver(): boolean
    +setGameOver(gameOver: boolean): void
  }

}

package speicherung {

  class HighscoreClient {
    -{static} HOST: String
    -{static} PORT: int
    +{static} sendeScore(score: int): int
  }

  class HighscoreServer {
    +{static} main(args: String[]): void
  }

  class HighscoreSpeicherung {
    -{static} DATEI: String
    +laden(): int
    +speichern(highscore: int): void
  }

}

' Vererbung
SpielFenster --|> JFrame
SpielPanel --|> JPanel

' Main startet SpielFenster
Main "1" --> "1" SpielFenster : erstellt

' SpielFenster enthält SpielPanel
SpielFenster "1" *-- "1" SpielPanel : enthält

' SpielPanel besitzt Vogel, SpielModell, SpielLogik und Säulen
SpielPanel "1" *-- "1" Vogel : besitzt
SpielPanel "1" *-- "1" SpielModell : besitzt
SpielPanel "1" *-- "1" SpielLogik : besitzt
SpielPanel "1" o-- "3" Saeule : verwaltet

' SpielLogik referenziert Modellobjekte
SpielLogik "1" --> "1" Vogel : aktualisiert
SpielLogik "1" --> "3" Saeule : bewegt
SpielLogik "1" --> "1" SpielModell : liest/schreibt

' SpielModell nutzt Speicherung und Client
SpielModell "1" *-- "1" HighscoreSpeicherung : besitzt
SpielModell "1" --> "1" HighscoreClient : ruft auf

' Server nutzt Speicherung
HighscoreServer "1" --> "1" HighscoreSpeicherung : liest/schreibt

' Client kommuniziert mit Server über TCP
HighscoreClient "1" ..> "1" HighscoreServer : TCP Port 12345

@enduml

